<resources>
    <string name="app_name">Meanco</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_basic">BasicActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_topic_detail">TopicDetailActivity</string>
    <string name="topic_from">Topic From:</string>
    <string name="topic_to">Topic To:</string>

    <string name="downvote">Downvote</string>
    <string name="upvote">Upvote</string>
    <string name="goon"><u>Continue without login</u></string>
</resources>
